--- a/index.html
+++ b/index.html
@@ -8,43 +8,80 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="outer-container">
-    <button class="hard-reset">Reset All</button>
-    <p class="score-1"><span class="points"></span><span class="name"></span></p>
-    <i class="points-divider">&#124;</i>
-    <p class="score-2"><span class="points"></span><span class="name"></span></p>
-    <div class="player-one-turn">
-      <p></p>
-    </div>
-    <div class="player-two-turn">
-      <p></p>
-    </div>
-    <div class="board-container">
-      <div class="game-board">
-        <div class="draw-message">
-          <p>It was a draw..</p>
-        </div>
-        <div class="lose-message">
-          <p>Uh oh, you lost..</p>
-        </div>
-        <div class="win-message">
-          <p>You Won!!! :)</p>
-        </div>
-        <canvas id="myCanvas"></canvas>
-        <ul class="boxes">
-          <li class="1"><i class="letter"><span>O</span></i></li>
-          <li class="2"><i class="letter"><span>O</span></i></li>
-          <li class="3"><i class="letter"><span>O</span></i></li>
-          <li class="4"><i class="letter"><span></span></i></li>
-          <li class="5"><i class="letter"><span></span></i></li>
-          <li class="6"><i class="letter"><span></span></i></li>
-          <li class="7"><i class="letter"><span></span></i></li>
-          <li class="8"><i class="letter"><span></span></i></li>
-          <li class="9"><i class="letter"><span></span></i></li>
-        </ul>
+
+    
+    <div class="scoreboard">
+      <div>
+        <h1>Score:</h1>
+        <h2>number</h2>
       </div>
     </div>
-  </div>
+
+
+    <div class="outer-container">
+      <button class="hard-reset">Reset All</button>
+      <p class="score-1"><span class="points"></span><span class="name"></span></p>
+      <i class="points-divider">&#124;</i>
+      <p class="score-2"><span class="points"></span><span class="name"></span></p>
+      <div class="player-one-turn">
+        <p></p>
+      </div>
+      <div class="player-two-turn">
+        <p></p>
+      </div>
+      <div class="board-container">
+        <div class="game-board">
+          <div class="draw-message">
+            <p>It was a draw..</p>
+          </div>
+          <div class="lose-message">
+            <p>Uh oh, you lost..</p>
+          </div>
+          <div class="win-message">
+            <p>You Won!!! :)</p>
+          </div>
+          <canvas id="myCanvas"></canvas>
+          <ul class="boxes">
+            <li class="1"><i class="letter"><span>O</span></i></li>
+            <li class="2"><i class="letter"><span>O</span></i></li>
+            <li class="3"><i class="letter"><span>O</span></i></li>
+            <li class="4"><i class="letter"><span></span></i></li>
+            <li class="5"><i class="letter"><span></span></i></li>
+            <li class="6"><i class="letter"><span></span></i></li>
+            <li class="7"><i class="letter"><span></span></i></li>
+            <li class="8"><i class="letter"><span></span></i></li>
+            <li class="9"><i class="letter"><span></span></i></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div>
+        <h1>Results</h1>
+      </div>
+    </div>
+
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="main.js"></script>
+  <script type="text/javascript">
+var nextChar = 'X';
+$('.letter').click(function(){
+  console.log(nextChar);
+  if (nextChar === 'X') {
+    nextChar = 'O';
+
+  }
+  else if (nextChar === 'O') {
+    nextChar = 'X';
+  }
+  $(this).find("span").html(nextChar);
+  console.log("it works");
+});
+
+var score = 0
+
+
+</script>
 </body>
 </html>
